stop horizontal scrolling nav shadows from spilling out of .nav-bar

--- a/src/navigation/css/components/_honeycomb.navigation.components.bar.scss
+++ b/src/navigation/css/components/_honeycomb.navigation.components.bar.scss
@@ -104,6 +104,7 @@
     @include responsive("medium") {
         float: none !important;
         position: relative;
+        overflow: hidden;
 
         ul {
             overflow: scroll;
